act-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: act-runner
  namespace: infra
  labels:
    app: act-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: act-runner
  template:
    metadata:
      labels:
        app: act-runner
    spec:
      serviceAccountName: default # Автоматически дает права на скачивание образов
      containers:
        - name: runner
          image: gitverse.ru/gitverse/act-runner:latest # Официальный образ со скриншота
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config.yaml
              subPath: config.yaml
            - name: docker-socket
              mountPath: /var/run/docker.sock
      volumes:
        - name: config
          configMap:
            name: runner-config
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
